[project]
name = "steam"
version = "1.6.1"
description = "Module for interacting with various Steam features"
readme = "README.rst"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=5.5.0",
    "protobuf==3.20.*",
    "pycryptodomex>=3.21.0",
    "requests>=2.32.3",
    "urllib3>=2.2.3",
    "vdf",
    "aiohttp>=3.10.10",
    "lxml>=5.3.0",
    "websockets>=14.0",
    "dnspython>=2.7.0",
]

[tool.uv.sources]
vdf = { git = "https://github.com/solsticegamestudios/vdf.git", rev = "v4.0" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { include = ["steam*"] }

[dependency-groups]
dev = [
    "coverage>=7.6.4",
    "coveralls>=4.0.1",
    "mock>=5.1.0",
    "pytest-cov>=6.0.0",
    "pyyaml>=6.0.2",
    "ruff>=0.7.3",
    "vcrpy>=5.1.0",
]

[tool.ruff]
line-length = 100
preview = true
fix = true
exclude = ['steam/protobufs']

[tool.ruff.lint]
select = ["E", "W", "F", "N", "I"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
'steam/protobufs/*' = ["ALL"]
'tests/*' = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
